test/fixtures/configs/projects/get/byUser/fail/error.js
module.exports = {
  url: '/users/1/projects'
};
